[project]
name = "util"
version = "0.1.0"
description = "Collection of Linux utility scripts"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "gitpython>=3.1.50",
    "pytest>=9.1.1",
    "pyyaml>=6.0.3",
    "ruff>=0.15.20",
]

[build-system] 
requires = ["setuptools>=61"] 
build-backend = "setuptools.build_meta"
