[project]
name = "util"
version = "0.1.0"
description = "Collection of Linux utility scripts"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "gitpython>=3.1.50",
    "pytest>=9.1.1",
    "pytest-timeout>=2.4.0",
    "pyyaml>=6.0.3",
    "ruff>=0.15.20",
]

[build-system] 
requires = ["setuptools>=61"] 
build-backend = "setuptools.build_meta"

[tool.ruff] 
line-length = 80
indent-width = 4 
target-version = "py310"

[tool.ruff.lint]
select = ["E501"] 

[tool.ruff.format] 
quote-style = "double" 
